--- a/src/components/VideoCopyOne.astro
+++ b/src/components/VideoCopyOne.astro
@@ -4,7 +4,7 @@ import CopyWrap from "./utils/CopyWrap.astro";
 ---
 
 <section
-  class="mx-auto w-full max-w-[1442px] relative z-20 flex flex-col items-center"
+  class="themdc-container mx-auto w-full max-w-[1442px] relative z-20 flex flex-col items-center"
 >
   <CopyWrap>
     The campaign aimed to shift this perception by positioning D.C. as an
