--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,7 @@
     />
     <title>Them x Washington D.C.</title>
   </head>
-  <body>
+  <body class="noscrollintro">
     <slot />
   </body>
 </html>
