--- a/src/components/StackingImages.astro
+++ b/src/components/StackingImages.astro
@@ -132,11 +132,11 @@
     .content--card {
       min-width: 400px;
       max-width: 1200px;
-      width: 75%;
+      width: 50%;
     }
   }
 </style>
-<div class="wrap z-50 relative ">
+<section class="themdc-container wrap z-50 relative mt-[-25px]">
   <div class="content content--sticky content--card bg-1">
     <img
       class="content__img content__img--small"
@@ -167,8 +167,8 @@
       src="https://media.them.us/photos/67e45a5b5c07e44cb8400584/original/pass/Them_DC_014.jpg?format=original"
     />
   </div>
-  <div class="content content--sticky content--card bg-5"></div>
-</div>
+  <!-- <div class="content content--sticky content--card bg-5"></div> -->
+</section>
 
 <script>
   import { gsap } from "gsap";
