--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,22 +9,33 @@ import VideoCopyOne from "../components/VideoCopyOne.astro";
 import FullGalleryScroll from "../components/FullGalleryScroll.astro";
 import VideoCopyTwo from "../components/VideoCopyTwo.astro";
 import StackingImages from "../components/StackingImages.astro";
+import HorizontalScroll from "../components/HorizontalScroll.astro";
+import Stats from "../components/Stats.astro";
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <Layout>
-  <!-- <IntroAnimation /> -->
-  <div>
-    <LogoBar />
+  <IntroAnimation />
+  <div class="main-content noshowintro">
+    <div class="z-20 absolute top-0 w-full flex flex-row justify-center items-center flex-wrap h-[75px] gap-7 py-4" >
+      <LogoBar />
+    </div>
     <Intro />
     <VideoCopyOne />
     <FullGalleryScroll />
     <VideoCopyTwo />
     <StackingImages />
-    <BGGradient />
+    <HorizontalScroll />
+    <Stats />
+    <div
+      class="z-20 relative bottom-5 w-full flex flex-row justify-center items-center flex-wrap h-[75px] gap-7 py-4"
+    >
+      <LogoBar />
+    </div>
   </div>
+  <BGGradient />
 </Layout>
 
 <style is:global>
@@ -60,7 +71,6 @@ import StackingImages from "../components/StackingImages.astro";
     font-family: "Apercu Bold";
   }
 
-
   .apercu-r {
     font-family: "Apercu Regular";
   }
@@ -76,12 +86,11 @@ import StackingImages from "../components/StackingImages.astro";
     font-style: italic;
   }
 
-  .playfair-<uniquifier > {
-    font-family: "Playfair", serif;
-    font-optical-sizing: auto;
-    font-weight: <weight>;
-    font-style: normal;
-    font-variation-settings: "wdth" 100;
+  .noshowintro {
+    opacity: 0;
+  }
+  .noscrollintro {
+    overflow: hidden;
   }
 
   @font-face {
@@ -99,4 +108,21 @@ import StackingImages from "../components/StackingImages.astro";
     font-style: normal;
     font-display: swap;
   }
+
+  @font-face {
+    font-family: "Playfair Light";
+    src: url("../fonts/Playfair_9pt-Light.woff2") format("woff2");
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: "Playfair Light Italic";
+    src: url("../fonts/Playfair_9pt-LightItalic.woff2") format("woff2");
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+  }
 </style>
+
