them dc updates

--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -174,7 +174,7 @@
 <script>
   import { gsap } from "gsap";
   import { ScrollTrigger } from "gsap/ScrollTrigger";
-  import { preloadImages } from "../scripts/utils.js";
+  // import { preloadImages } from "../scripts/utils.js";
 
   gsap.registerPlugin(ScrollTrigger);
   ScrollTrigger.normalizeScroll(true);
@@ -271,11 +271,11 @@
   };
 
   // Preload images, initialize smooth scrolling, apply scroll-triggered animations, and remove loading class from body
-  preloadImages(".grid__item-img-inner").then(() => {
+  // preloadImages(".grid__item-img-inner").then(() => {
     initSmoothScrolling();
     scroll();
-    document.body.classList.remove("loading");
-  });
+    // document.body.classList.remove("loading");
+  // });
 </script>
 <script src="../scripts/lenis.min.js"></script>
-<script src="../scripts/imagesloaded.pkgd.min.js"></script>
+<!-- <script src="../scripts/imagesloaded.pkgd.min.js"></script> -->
