--- a/src/components/FullGalleryScroll.astro
+++ b/src/components/FullGalleryScroll.astro
@@ -47,30 +47,198 @@
   .playfairR {
     font-family: "Playfair Light";
   }
-  @media screen and (min-width: 53em) {
-    .grid_full {
-      grid-template-columns: repeat(12, 2fr);
-      gap: 20px;
-    }
 
-    .grid__item_full {
-      grid-column: var(--c) / span var(--s);
-      grid-row: var(--r);
-    }
+  .grid_full {
+    grid-template-columns: repeat(12, 2fr);
+    gap: 20px;
+  }
+
+  .grid__item_full {
+    grid-column: var(--c) / span var(--s);
+    grid-row: var(--r);
   }
 
   h3 {
     position: sticky;
   }
-</style>
 
+  .griditem1 {
+    --r: 1;
+    --c: 2;
+    --s: 2;
+  }
+
+  .griditem2 {
+    --r: 2;
+    --c: 9;
+    --s: 4;
+    margin-top: -15vw;
+    margin-right: 3vw;
+  }
+
+  .griditem3 {
+    --r: 3;
+    --c: 3;
+    --s: 3;
+  }
+
+  .griditem4 {
+    --r: 4;
+    --c: 8;
+    --s: 3;
+    margin-top: -15vw;
+    margin-right: 5vw;
+  }
+
+  .griditem5 {
+    --r: 5;
+    --c: 1;
+    --s: 3;
+  }
+
+  .griditem6 {
+    --r: 6;
+    --c: 10;
+    --s: 3;
+    margin-top: -15vw;
+    margin-right: 3vw;
+  }
+
+  .griditem7 {
+    --r: 7;
+    --c: 3;
+    --s: 2;
+    margin-top: 5vw;
+    margin-right: 3vw;
+  }
+
+  .griditem8 {
+    --r: 8;
+    --c: 9;
+    --s: 2;
+    margin-top: -5vw;
+  }
+
+  .griditem9 {
+    --r: 9;
+    --c: 3;
+    --s: 3;
+  }
+
+  .griditem10 {
+    --r: 10;
+    --c: 10;
+    --s: 2;
+  }
+
+  .griditem11 {
+    --r: 11;
+    --c: 1;
+    --s: 3;
+    margin-top: -5vw;
+    margin-left: 3vw;
+  }
+
+  .griditem12 {
+    --r: 12;
+    --c: 8;
+    --s: 3;
+    margin-top: -5vw;
+    margin-left: 3vw;
+  }
+
+  @media only screen and (max-width: 820px) {
+    .grid_full {
+      grid-template-columns: repeat(6, 2fr);
+      gap: 20px;
+      padding: 0 50px;
+      row-gap: 65px;
+    }
+
+    .grid__item_full {
+      margin: 0 !important;
+    } 
+    
+    .griditem1 {
+      --c: 1;
+      --r: 1;
+      --s: 2;
+    }
+
+    .griditem2 {
+      --c: 4;
+      --r: 2;
+      --s: 3;
+    }
+
+    .griditem3 {
+      --c: 1;
+      --r: 3;
+      --s: 3;
+    }
+
+    .griditem4 {
+      --c: 4;
+      --r: 4;
+      --s: 2;
+    }
+
+    .griditem5 {
+      --c: 2;
+      --r: 5;
+      --s: 1;
+    }
+
+    .griditem6 {
+      --c: 5;
+      --r: 6;
+      --s: 2;
+    }
+
+    .griditem7 {
+      --c: 1;
+      --r: 7;
+      --s: 2;
+    }
+
+    .griditem8 {
+      --c: 4;
+      --r: 8;
+      --s: 3;
+    }
+
+    .griditem9 {
+      --c: 2;
+      --r: 9;
+      --s: 3;
+    }
+
+    .griditem10 {
+      --c: 4;
+      --r: 10;
+      --s: 2;
+    }
+
+    .griditem11 {
+      --c: 1;
+      --r: 11;
+      --s: 1;
+    }
+
+    .griditem12 {
+      --c: 4;
+      --r: 12;
+      --s: 3;
+    }
+  }
+</style>
 
 <section class="my-24 relative themdc-container">
   <h3 class="sticky top-[50%] left-[50%] text-center text-7xl playfairI">
     Taking<br />over <span class="playfairR">D.C.</span>
   </h3>
   <div class="grid_full connectedgrid_full mt-[-133px]">
-    <figure class="grid__item_full" style="--r: 1;--c: 2; --s: 2">
+    <figure class="griditem1 grid__item_full">
       <div class="grid__item-img_full">
         <div
           class="grid__item-img-inner_full"
@@ -79,10 +247,7 @@
         </div>
       </div>
     </figure>
-    <figure
-      class="grid__item_full mt-[-15vw] mr-[3vw]"
-      style="--r: 2;--c: 9; --s:4"
-    >
+    <figure class="griditem2 grid__item_full" style="">
       <div class="grid__item-img_full">
         <div
           class="grid__item-img-inner_full"
@@ -91,7 +256,7 @@
         </div>
       </div>
     </figure>
-    <figure class="grid__item_full" style="--r: 3;--c: 3; --s:3">
+    <figure class="griditem3 grid__item_full" style="">
       <div class="grid__item-img_full">
         <div
           class="grid__item-img-inner_full"
@@ -100,10 +265,7 @@
         </div>
       </div>
     </figure>
-    <figure
-      class="grid__item_full mt-[-15vw] mr-[5vw]"
-      style="--r: 4;--c: 8; --s:3"
-    >
+    <figure class="griditem4 grid__item_full" style="">
       <div class="grid__item-img_full">
         <div
           class="grid__item-img-inner_full"
@@ -112,7 +274,7 @@
         </div>
       </div>
     </figure>
-    <figure class="grid__item_full" style="--r: 5;--c: 1; --s:3">
+    <figure class="griditem5 grid__item_full" style="">
       <div class="grid__item-img_full">
         <div
           class="grid__item-img-inner_full"
@@ -122,10 +284,7 @@
       </div>
     </figure>
 
-    <figure
-      class="grid__item_full mt-[-15vw] mr-[3vw]"
-      style="--r: 6;--c: 10; --s:3"
-    >
+    <figure class="griditem6 grid__item_full" style="">
       <div class="grid__item-img_full">
         <div
           class="grid__item-img-inner_full"
@@ -134,10 +293,7 @@
         </div>
       </div>
     </figure>
-    <figure
-      class="grid__item_full mt-[-5vw] ml-[-3vw]"
-      style="--r: 7;--c: 3; --s: 2"
-    >
+    <figure class="griditem7 grid__item_full" style="">
       <div class="grid__item-img_full">
         <div
           class="grid__item-img-inner_full"
@@ -146,7 +302,7 @@
         </div>
       </div>
     </figure>
-    <figure class="grid__item_full mt-[-5vw]" style="--r: 8;--c: 9; --s: 2">
+    <figure class="griditem8 grid__item_full" style="">
       <div class="grid__item-img_full">
         <div
           class="grid__item-img-inner_full"
@@ -155,7 +311,7 @@
         </div>
       </div>
     </figure>
-    <figure class="grid__item_full" style="--r: 9;--c: 3; --s: 3">
+    <figure class="griditem9 grid__item_full" style="">
       <div class="grid__item-img_full">
         <div
           class="grid__item-img-inner_full"
@@ -164,7 +320,7 @@
         </div>
       </div>
     </figure>
-    <figure class="grid__item_full" style="--r: 10;--c: 10; --s: 2">
+    <figure class="griditem10 grid__item_full" style="">
       <div class="grid__item-img_full">
         <div
           class="grid__item-img-inner_full"
@@ -173,10 +329,7 @@
         </div>
       </div>
     </figure>
-    <figure
-      class="grid__item_full mt-[-5vw] ml-[3vw]"
-      style="--r: 11;--c: 1; --s:3;"
-    >
+    <figure class="griditem11 grid__item_full" style="">
       <div class="grid__item-img_full">
         <div
           class="grid__item-img-inner_full"
@@ -185,10 +338,7 @@
         </div>
       </div>
     </figure>
-    <figure
-      class="grid__item_full mt-[-5vw] ml-[3vw]"
-      style="--r: 12;--c: 8; --s:3;"
-    >
+    <figure class="griditem12 grid__item_full mt-[-5vw] ml-[3vw]" style="">
       <div class="grid__item-img_full">
         <div
           class="grid__item-img-inner_full"
