them dc updates

--- a/src/components/FullGalleryScroll.astro
+++ b/src/components/FullGalleryScroll.astro
@@ -186,7 +186,7 @@
     .griditem5 {
       --c: 2;
       --r: 5;
-      --s: 1;
+      --s: 2;
     }
 
     .griditem6 {
@@ -222,7 +222,7 @@
     .griditem11 {
       --c: 1;
       --r: 11;
-      --s: 1;
+      --s: 2;
     }
 
     .griditem12 {
@@ -233,7 +233,7 @@
   }
 </style>
 
-<section class="my-24 relative themdc-container">
+<section class="md:my-24 relative themdc-container">
   <h3 class="sticky top-[50%] left-[50%] text-center text-7xl playfairI">
     Taking<br />over <span class="playfairR">D.C.</span>
   </h3>
@@ -247,7 +247,7 @@
         </div>
       </div>
     </figure>
-    <figure class="griditem2 grid__item_full" style="">
+    <figure class="griditem2 grid__item_full">
       <div class="grid__item-img_full">
         <div
           class="grid__item-img-inner_full"
@@ -256,7 +256,7 @@
         </div>
       </div>
     </figure>
-    <figure class="griditem3 grid__item_full" style="">
+    <figure class="griditem3 grid__item_full">
       <div class="grid__item-img_full">
         <div
           class="grid__item-img-inner_full"
@@ -265,7 +265,7 @@
         </div>
       </div>
     </figure>
-    <figure class="griditem4 grid__item_full" style="">
+    <figure class="griditem4 grid__item_full">
       <div class="grid__item-img_full">
         <div
           class="grid__item-img-inner_full"
@@ -274,7 +274,7 @@
         </div>
       </div>
     </figure>
-    <figure class="griditem5 grid__item_full" style="">
+    <figure class="griditem5 grid__item_full">
       <div class="grid__item-img_full">
         <div
           class="grid__item-img-inner_full"
@@ -284,7 +284,7 @@
       </div>
     </figure>
 
-    <figure class="griditem6 grid__item_full" style="">
+    <figure class="griditem6 grid__item_full">
       <div class="grid__item-img_full">
         <div
           class="grid__item-img-inner_full"
@@ -293,7 +293,7 @@
         </div>
       </div>
     </figure>
-    <figure class="griditem7 grid__item_full" style="">
+    <figure class="griditem7 grid__item_full">
       <div class="grid__item-img_full">
         <div
           class="grid__item-img-inner_full"
@@ -302,7 +302,7 @@
         </div>
       </div>
     </figure>
-    <figure class="griditem8 grid__item_full" style="">
+    <figure class="griditem8 grid__item_full">
       <div class="grid__item-img_full">
         <div
           class="grid__item-img-inner_full"
@@ -311,7 +311,7 @@
         </div>
       </div>
     </figure>
-    <figure class="griditem9 grid__item_full" style="">
+    <figure class="griditem9 grid__item_full">
       <div class="grid__item-img_full">
         <div
           class="grid__item-img-inner_full"
@@ -320,7 +320,7 @@
         </div>
       </div>
     </figure>
-    <figure class="griditem10 grid__item_full" style="">
+    <figure class="griditem10 grid__item_full">
       <div class="grid__item-img_full">
         <div
           class="grid__item-img-inner_full"
@@ -329,7 +329,7 @@
         </div>
       </div>
     </figure>
-    <figure class="griditem11 grid__item_full" style="">
+    <figure class="griditem11 grid__item_full">
       <div class="grid__item-img_full">
         <div
           class="grid__item-img-inner_full"
@@ -338,7 +338,7 @@
         </div>
       </div>
     </figure>
-    <figure class="griditem12 grid__item_full mt-[-5vw] ml-[3vw]" style="">
+    <figure class="griditem12 grid__item_full mt-[-5vw] ml-[3vw]">
       <div class="grid__item-img_full">
         <div
           class="grid__item-img-inner_full"
