--- a/src/components/LogoBar.astro
+++ b/src/components/LogoBar.astro
@@ -2,7 +2,7 @@
 import { Image } from "astro:assets";
 ---
 
-  <a href="https://www.them.us/">
+  <a href="https://www.them.us/" target="_blank" class="mt-[5px]">
     <Image
       class=""
       width="111.51"
@@ -11,8 +11,8 @@ import { Image } from "astro:assets";
       alt=""
     />
   </a>
-  <p>&#x2715;</p>
-  <a href="https://washington.org/">
+  <p class="mt-[15px]">&#x2715;</p>
+  <a href="https://washington.org/"target="_blank" >
     <Image
       class=""
       width="92.24"
