--- a/src/components/VideoCopyTwo.astro
+++ b/src/components/VideoCopyTwo.astro
@@ -7,7 +7,7 @@ import CopyWrap from "./utils/CopyWrap.astro";
   class="themdc-container mx-auto w-full max-w-[1442px] relative z-20 flex flex-col items-center mt-30"
 >
   <Video
-    url="https://media.them.us/clips/624ccd6f201781c9ea7bc7e9/original/pass/THEM_REBRAND_CMPN_FINAL_16-9_COLOR_040422_1__Converted_-hi_AdobeCreativeCloudExpress.mp4?format=original"
+    url="src/assets/CONDE_NAST_DC_X_THEM_2024_AWARDS_SIZZLE_H264_1.mp4"
     width={1920}
     height={1080}
     className="h-auto w-[800px]"
