--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -1,3 +1,7 @@
+---
+import CopyWrap from "./utils/CopyWrap.astro";
+---
+
 <style>
   .connectedgrid {
     --s: 2;
@@ -62,30 +66,131 @@
     color: var(--color-year);
   }
 
-  @media screen and (min-width: 53em) {
+  .griditem1 {
+    --r: 1;
+    --c: 1;
+    --s: 2;
+    --img-ratio: 1;
+  }
+  .griditem2 {
+    --r: 4;
+    --c: 7;
+    --img-ratio: 1;
+  }
+  .griditem3 {
+    --r: 5;
+    --c: 5;
+    --img-ratio: 1;
+  }
+  .griditem4 {
+    --r: 6;
+    --c: 3;
+    --img-ratio: 1;
+  }
+  .griditem5 {
+    --r: 7;
+    --c: 1;
+    --img-ratio: 1;
+  }
+  .griditem6 {
+    --r: 8;
+    --c: 3;
+    --s: 4;
+  }
+
+  .girditemtext {
+    --r: 7;
+    --c: 5;
+    --s: 4;
+  }
+
+  /* @media screen and (min-width: 53em) { */
+  .grid {
+    grid-template-columns: repeat(8, 1fr);
+  }
+
+  .grid__item {
+    grid-column: var(--c) / span var(--s);
+    grid-row: var(--r);
+  }
+  /* } */
+
+  @media screen and (max-width: 820px) {
+    .girditemtext {
+      --r: 6 / span 2;
+      /* --r: 8/6; */
+    }
+  }
+
+  @media screen and (max-width: 500px) {
     .grid {
-      grid-template-columns: repeat(8, 1fr);
+      grid-template-columns: repeat(2, 1fr);
+      gap: 25px;
     }
 
-    .grid__item {
-      grid-column: var(--c) / span var(--s);
-      grid-row: var(--r);
+    .griditem2 {
+      --r: 2;
+      --c: 1;
+      --s: 1;
+    }
+    .griditem3 {
+      --r: 2;
+      --c: 2;
+      --s: 1;
+    }
+    .griditem4 {
+      --r: 3;
+      --c: 1;
+      --s: 1;
+    }
+    .griditem5 {
+      --r: 3;
+      --c: 2;
+      --s: 1;
+    }
+    .griditem6 {
+      --r: 4;
+      --c: 1;
+      --s: 2;
+    }
+    .girditemtext {
+      --r: 1;
+      --c: 1;
+      --s: 2;
+      margin: 60px 0 50px;
+      text-align: center;
+    }
+
+    .grid__item-caption {
+      gap: 0;
+      padding: 0 3px 0 0;
+      font-size: 12px;
     }
   }
 </style>
 
 <section class="themdc-container">
   <div
-    class="absolute z-9 flex flex-wrap w-full h-full top-0 content-center justify-center"
+    class="md:absolute z-9 flex flex-wrap w-full md:h-full top-0 content-center justify-center"
   >
     <img
-      class="h-auto max-w-[700px] w-[45%] mt-[-10h]"
+      class="h-auto max-w-[700px] w-[45%] mt-[-10vh] showdesktop"
       src="https://media.them.us/photos/67e584665120336f7dc2363b/original/pass/DC_TITLE_1-01%201.png?format=original"
       alt=""
     />
+    <img
+      class="h-auto max-w-[300px] w-[70%] absolute showmobile z-20 top-[100px]"
+      src="https://media.them.us/photos/67eeb9cd28c6c1c64c02eb89/original/pass/DC_TITLE_1-01-1_white.png?format=original"
+      alt=""
+    />
+    <img
+      class="h-auto w-full showmobile top-0 z-10"
+      src="src/assets/queeringthecapital_mobileherov2.jpg"
+      alt=""
+    />
   </div>
-  <div class="grid connectedgrid mt-24">
-    <figure class="grid__item" style="--r: 1;--c: 1;--s:2; --img-ratio: 1;">
+  <div class="grid connectedgrid md:mt-32 px-10">
+    <figure class="grid__item griditem1 showdesktop">
       <div class="grid__item-img">
         <div
           class="grid__item-img-inner"
@@ -95,7 +200,7 @@
       </div>
       <figcaption class="grid__item-caption"></figcaption>
     </figure>
-    <figure class="grid__item" style="--r: 4;--c: 7; --img-ratio: 1">
+    <figure class="grid__item griditem2">
       <div class="grid__item-img">
         <div
           class="grid__item-img-inner"
@@ -107,7 +212,7 @@
         <h3>Dynasty</h3>
       </figcaption>
     </figure>
-    <figure class="grid__item" style="--r: 5;--c: 5; --img-ratio: 1">
+    <figure class="grid__item griditem3">
       <div class="grid__item-img">
         <div
           class="grid__item-img-inner"
@@ -119,7 +224,7 @@
         <h3>Kiko Soirée</h3>
       </figcaption>
     </figure>
-    <figure class="grid__item" style="--r: 6;--c: 3; --img-ratio: 1">
+    <figure class="grid__item griditem4">
       <div class="grid__item-img">
         <div
           class="grid__item-img-inner"
@@ -131,7 +236,7 @@
         <h3>Serena Tea</h3>
       </figcaption>
     </figure>
-    <figure class="grid__item" style="--r: 7;--c: 1; --img-ratio: 1">
+    <figure class="grid__item griditem5">
       <div class="grid__item-img">
         <div
           class="grid__item-img-inner"
@@ -144,9 +249,9 @@
         <br />
       </figcaption>
     </figure>
-    <figure class="grid__item items-center flex" style="--r: 7;--c: 5;--s: 4;">
+    <figure class="grid__item items-center flex girditemtext">
       <figcaption class="">
-        <p class="pr-10">
+        <p class="md:px-10 text-black text-base leading-5">
           For LGBTQ+ travelers, trusted recommendations don't come from
           traditional advertising-they come from community-driven storytelling
           and authentic representation. Research showed that LGBTQ+ visitors
@@ -156,7 +261,7 @@
         </p>
       </figcaption>
     </figure>
-    <figure class="grid__item" style="--r: 8;--c: 3;--s: 4;">
+    <figure class="grid__item griditem6">
       <div class="grid__item-img">
         <div
           class="grid__item-img-inner"
@@ -174,40 +279,15 @@
 <script>
   import { gsap } from "gsap";
   import { ScrollTrigger } from "gsap/ScrollTrigger";
-  // import { preloadImages } from "../scripts/utils.js";
-  import Lenis from "lenis";
-  
+
   gsap.registerPlugin(ScrollTrigger);
   ScrollTrigger.normalizeScroll(true);
-
-  // Define a variable that will store the Lenis smooth scrolling object
-  let lenis: any;
 
   // Get the grid element
   const grid = document.querySelector(".grid");
 
   // Get all grid items within the grid
   const gridItems = document.querySelectorAll(".grid__item") as any;
-
-  // Function to initialize Lenis for smooth scrolling
-  const initSmoothScrolling = () => {
-    // Instantiate the Lenis object with specified properties
-    lenis = new Lenis({
-      lerp: 0.15, // Lower values create a smoother scroll effect
-      smoothWheel: true, // Enables smooth scrolling for mouse wheel events
-    });
-
-    // Update ScrollTrigger each time the user scrolls
-    lenis.on("scroll", () => ScrollTrigger.update());
-
-    // Define a function to run at each animation frame
-    const scrollFn = (time: any) => {
-      lenis.raf(time); // Run Lenis' requestAnimationFrame method
-      requestAnimationFrame(scrollFn); // Recursively call scrollFn on each frame
-    };
-    // Start the animation frame loop
-    requestAnimationFrame(scrollFn);
-  };
 
   const scroll = () => {
     const viewportHeight = window.innerHeight;
@@ -225,53 +305,54 @@
       // Determine the origin for transformations (either 100 or 0 depending on position)
       const originX = isLeftSide ? 100 : 0;
 
-      gsap
-        .timeline({
-          defaults: {
-            ease: "power2",
-          },
-          scrollTrigger: {
-            trigger: item,
-            start: "top bottom",
-            end: "+=75%",
-            scrub: true,
-          },
-        })
-        .fromTo(
-          item.querySelector(".grid__item-img"),
-          {
-            rotation: isLeftSide ? -45 : 45,
-            opacity: 0,
-            transformOrigin: `${originX}% 0%`,
-          },
-          {
-            rotation: 0,
-            opacity: 1,
-          },
-          0
-        )
-        .fromTo(
-          item.querySelector(".grid__item-caption"),
-          {
-            rotation: isLeftSide ? -45 : 45,
-            xPercent: isLeftSide ? -150 : 150,
-            yPercent: 500,
-            opacity: 0,
-            transformOrigin: `${originX}% 0%`,
-          },
-          {
-            ease: "sine",
-            rotation: 0,
-            xPercent: 0,
-            yPercent: 0,
-            opacity: 1,
-          },
-          0
-        );
+      let mm = gsap.matchMedia();
+      mm.add("(min-width: 821px)", () => {
+        gsap
+          .timeline({
+            defaults: {
+              ease: "power2",
+            },
+            scrollTrigger: {
+              trigger: item,
+              start: "top bottom",
+              end: "+=75%",
+              scrub: true,
+            },
+          })
+          .fromTo(
+            item.querySelector(".grid__item-img"),
+            {
+              rotation: isLeftSide ? -45 : 45,
+              opacity: 0,
+              transformOrigin: `${originX}% 0%`,
+            },
+            {
+              rotation: 0,
+              opacity: 1,
+            },
+            0
+          )
+          .fromTo(
+            item.querySelector(".grid__item-caption"),
+            {
+              rotation: isLeftSide ? -45 : 45,
+              xPercent: isLeftSide ? -150 : 150,
+              yPercent: 500,
+              opacity: 0,
+              transformOrigin: `${originX}% 0%`,
+            },
+            {
+              ease: "sine",
+              rotation: 0,
+              xPercent: 0,
+              yPercent: 0,
+              opacity: 1,
+            },
+            0
+          );
+      });
     });
   };
 
-  initSmoothScrolling();
   scroll();
 </script>
-
