--- a/src/components/Stats.astro
+++ b/src/components/Stats.astro
@@ -57,14 +57,36 @@
   }
 
   .results {
-    width: 50%;
     text-align: center;
     margin-bottom: 50px;
   }
+
+  @media screen and (max-width: 820px) {
+    .blocknumber-large {
+      font-size: 100px;
+      line-height: 100px;
+    }
+    .blocknumber {
+      font-size: 50px;
+      line-height: 50px;
+    }
+    .block-large {
+      font-size: 25px;
+    }
+    .block-small {
+      font-size: 14px;
+      line-height: 17px;
+    }
+
+    .results-row {
+      gap: 30px;
+    }
+  }
+  
 </style>
 
 <section
-  class="themdc-container px-8 relative z-20 flex flex-col items-center justify-center mb-32"
+  class="themdc-container px-8 relative z-20 flex flex-col items-center justify-center mb-44"
 >
   <div class="results">
     <h3>Results</h3>
@@ -95,7 +117,7 @@
       </div>
     </div>
   </div>
-  <br /><br />
+  <br />
   <div class="results-row">
     <div class="results-item">
       <div class="text-small">
