--- a/src/components/VideoCopyOne.astro
+++ b/src/components/VideoCopyOne.astro
@@ -21,7 +21,7 @@ import CopyWrap from "./utils/CopyWrap.astro";
     vibrant look at D.C.'s queer culture and authentic living.
   </CopyWrap>
   <Video
-    url="https://media.them.us/clips/624ccd6f201781c9ea7bc7e9/original/pass/THEM_REBRAND_CMPN_FINAL_16-9_COLOR_040422_1__Converted_-hi_AdobeCreativeCloudExpress.mp4?format=original"
+    url="src/assets/CONDE_NAST_DC_X_THEM_2024_AWARDS_SIZZLE_H264_1.mp4"
     width={1920}
     height={1080}
     className="h-auto w-[800px]"
