--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Layout from "../layouts/Layout.astro";
 import IntroAnimation from "../components/IntroAnimation.astro";
 import BGGradient from "../components/GradientBG.astro";
 import LogoBar from "../components/LogoBar.astro";
+import LogoBarTop from "../components/LogoBarTop.astro";
 import Intro from "../components/Intro.astro";
 import VideoCopyOne from "../components/VideoCopyOne.astro";
 import FullGalleryScroll from "../components/FullGalleryScroll.astro";
@@ -17,10 +18,12 @@ import Stats from "../components/Stats.astro";
 ---
 
 <Layout>
-  <IntroAnimation />
-  <div class="main-content noshowintro">
-    <div class="z-20 absolute top-0 w-full flex flex-row justify-center items-center flex-wrap h-[75px] gap-7 py-4" >
-      <LogoBar />
+  <!-- <IntroAnimation /> -->
+  <div class="main-content">
+    <div
+      class="z-20 absolute md:top-5 top-7 w-full flex flex-row justify-center items-center flex-wrap md:h-[110px] h-[50px] gap-7"
+    >
+      <LogoBarTop />
     </div>
     <Intro />
     <VideoCopyOne />
@@ -30,7 +33,7 @@ import Stats from "../components/Stats.astro";
     <HorizontalScroll />
     <Stats />
     <div
-      class="z-20 relative bottom-5 w-full flex flex-row justify-center items-center flex-wrap h-[75px] gap-7 py-4"
+      class="z-20 relative bottom-10 w-full flex flex-row justify-center items-center flex-wrap h-[110px] gap-7 py-4"
     >
       <LogoBar />
     </div>
@@ -93,6 +96,22 @@ import Stats from "../components/Stats.astro";
     overflow: hidden;
   }
 
+  .showdesktop {
+    display: block;
+  }
+  .showmobile {
+    display: none;
+  }
+
+  @media screen and (max-width: 500px) {
+    .showdesktop {
+      display: none;
+    }
+    .showmobile {
+      display: block;
+    }
+  }
+
   @font-face {
     font-family: "Apercu Bold";
     src: url("../fonts/apercu-bold.woff2") format("woff2");
@@ -126,3 +145,35 @@ import Stats from "../components/Stats.astro";
   }
 </style>
 
+<script>
+  import { gsap } from "gsap";
+  import { ScrollTrigger } from "gsap/ScrollTrigger";
+  import Lenis from "lenis";
+
+  gsap.registerPlugin(ScrollTrigger);
+  ScrollTrigger.normalizeScroll(true);
+
+  let lenis: any;
+
+  // Function to initialize Lenis for smooth scrolling
+  const initSmoothScrolling = () => {
+    // Instantiate the Lenis object with specified properties
+    lenis = new Lenis({
+      lerp: 0.15, // Lower values create a smoother scroll effect
+      smoothWheel: true, // Enables smooth scrolling for mouse wheel events
+    });
+
+    // Update ScrollTrigger each time the user scrolls
+    lenis.on("scroll", () => ScrollTrigger.update());
+
+    // Define a function to run at each animation frame
+    const scrollFn = (time: any) => {
+      lenis.raf(time); // Run Lenis' requestAnimationFrame method
+      requestAnimationFrame(scrollFn); // Recursively call scrollFn on each frame
+    };
+    // Start the animation frame loop
+    requestAnimationFrame(scrollFn);
+  };
+
+  initSmoothScrolling(); // Initialize Lenis for smooth scrolling
+</script>
