them dc updates

--- a/src/components/VideoCopyOne.astro
+++ b/src/components/VideoCopyOne.astro
@@ -21,7 +21,7 @@ import CopyWrap from "./utils/CopyWrap.astro";
     vibrant look at D.C.'s queer culture and authentic living.
   </CopyWrap>
   <Video
-    url="src/assets/CONDE_NAST_DC_X_THEM_2024_AWARDS_SIZZLE_H264_1.mp4"
+    url="https://res.cloudinary.com/dbwsyvmxr/video/upload/v1743706340/CONDE_NAST_DC_X_THEM_2024_AWARDS_SIZZLE_H264_1_ow7g1c"
     width={1920}
     height={1080}
     className="h-auto w-[800px]"
