--- a/src/components/utils/CopyWrap.astro
+++ b/src/components/utils/CopyWrap.astro
@@ -1,4 +1,6 @@
-<div class="w-full max-w-[425px] mx-auto text-black text-base leading-5 md:my-24 my-16 px-10">
+<div
+  class="w-full max-w-[600px] mx-auto text-black text-base leading-5 md:my-24 my-16 px-10"
+>
   <p>
     <slot />
   </p>
