--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -189,7 +189,7 @@ import CopyWrap from "./utils/CopyWrap.astro";
       alt=""
     />
   </div>
-  <div class="grid connectedgrid md:mt-32 px-10">
+  <div class="grid connectedgrid md:mt-32 md:px-0 px-10">
     <figure class="grid__item griditem1 showdesktop">
       <div class="grid__item-img">
         <div
