--- a/src/components/VideoCopyTwo.astro
+++ b/src/components/VideoCopyTwo.astro
@@ -7,7 +7,7 @@ import CopyWrap from "./utils/CopyWrap.astro";
   class="themdc-container mx-auto w-full max-w-[1442px] relative z-20 flex flex-col items-center mt-30"
 >
   <Video
-    url="src/assets/CONDE_NAST_DC_X_THEM_2024_AWARDS_SIZZLE_H264_1.mp4"
+    url="https://res.cloudinary.com/dbwsyvmxr/video/upload/v1743703091/TRV235749_TH_x_DC_Chosen_Family_Trip_Longform_16x9_Captions_022624_Texted_H264_1_vbqkf0"
     width={1920}
     height={1080}
     className="h-auto w-[800px]"
