--- a/src/components/utils/Video.astro
+++ b/src/components/utils/Video.astro
@@ -38,8 +38,13 @@ const {
   poster={poster}
 >
   {
+    format === "webm" || format === "both" ? (
+      <source src={`${url}.webm`} type="video/webm" />
+    ) : null
+  }
+  {
     format === "mp4" || format === "both" ? (
-      <source src={`${url}`} type="video/mp4" />
+      <source src={`${url}.mp4`} type="video/mp4" />
     ) : null
   }
 </video>
