them dc updates

--- a/src/components/FullGalleryScroll.astro
+++ b/src/components/FullGalleryScroll.astro
@@ -157,8 +157,8 @@
 
     .grid__item_full {
       margin: 0 !important;
-    } 
-    
+    }
+
     .griditem1 {
       --c: 1;
       --r: 1;
@@ -234,7 +234,9 @@
 </style>
 
 <section class="md:my-24 relative themdc-container">
-  <h3 class="sticky top-[50%] left-[50%] text-center text-7xl playfairI">
+  <h3
+    class="sticky top-[50%] left-[50%] text-center md:text-7xl text-6xl playfairI"
+  >
     Taking<br />over <span class="playfairR">D.C.</span>
   </h3>
   <div class="grid_full connectedgrid_full mt-[-133px]">
