--- a/src/components/HorizontalScroll.astro
+++ b/src/components/HorizontalScroll.astro
@@ -34,6 +34,7 @@
 
   .d_scroll img {
     width: 100%;
+    max-width: 700px;
   }
 
   @media only screen and (max-width: 820px) {
@@ -46,7 +47,10 @@
   }
 </style>
 
-<section id="s_scroll" class="sectionscroller themdc-container">
+<section
+  id="s_scroll"
+  class="sectionscroller themdc-container md:mt-[-25px] md:mb-[-25px] mt-[-50vh] mb-[-15vh]"
+>
   <div class="wrap-scroll">
     <div class="d_scroll sc0">
       <img
