--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -12,6 +12,7 @@ import CopyWrap from "./utils/CopyWrap.astro";
     --color-title: #000000;
     --color-year: #b9b3af;
     z-index: 10;
+    margin-top: 128px;
   }
 
   .grid {
@@ -115,6 +116,18 @@ import CopyWrap from "./utils/CopyWrap.astro";
   }
   /* } */
 
+  .introcontainer {
+    height: 100%;
+    position: absolute;
+  }
+
+  @media screen and (max-width: 1024px) {
+    .introcontainer {
+      position: absolute;
+      height: 80%;
+    }
+  }
+
   @media screen and (max-width: 820px) {
     .girditemtext {
       --r: 6 / span 2;
@@ -166,12 +179,22 @@ import CopyWrap from "./utils/CopyWrap.astro";
       padding: 0 3px 0 0;
       font-size: 12px;
     }
+
+    .introcontainer {
+      position: relative;
+      height: 80%;
+    }
+
+    .connectedgrid {
+      padding-inline: 40px;
+      margin-top: 0;
+    }
   }
 </style>
 
 <section class="themdc-container">
   <div
-    class="md:absolute z-9 flex flex-wrap w-full md:h-full top-0 content-center justify-center"
+    class="introcontainer z-9 flex flex-wrap w-full top-0 content-center justify-center"
   >
     <img
       class="h-auto max-w-[700px] w-[45%] mt-[-10vh] showdesktop"
@@ -189,7 +212,7 @@ import CopyWrap from "./utils/CopyWrap.astro";
       alt=""
     />
   </div>
-  <div class="grid connectedgrid md:mt-32 md:px-0 px-10">
+  <div class="grid connectedgrid">
     <figure class="grid__item griditem1 showdesktop">
       <div class="grid__item-img">
         <div
