--- a/src/components/VideoCopyOne.astro
+++ b/src/components/VideoCopyOne.astro
@@ -25,6 +25,7 @@ import CopyWrap from "./utils/CopyWrap.astro";
     width={1920}
     height={1080}
     className="h-auto w-[800px]"
+    poster="https://media.them.us/photos/67eee24449434534793b4c02/original/pass/sizzleposter.jpg?format=original"
   />
   <CopyWrap>
     We ditched the typical travel content series for something more innovative.
