--- a/src/components/VideoCopyTwo.astro
+++ b/src/components/VideoCopyTwo.astro
@@ -11,6 +11,7 @@ import CopyWrap from "./utils/CopyWrap.astro";
     width={1920}
     height={1080}
     className="h-auto w-[800px]"
+    poster="https://media.them.us/photos/67eee2445b6685b045165875/original/pass/longforposter-themdc.jpg?format=original"
   />
   <CopyWrap>
     We positioned D.C. as a must-visit LGBTQ+ destination through authentic
