--- a/src/components/StackingImages.astro
+++ b/src/components/StackingImages.astro
@@ -135,14 +135,11 @@
   }
 
   @media only screen and (max-width: 820px) {
-    
-
-
   }
-
-
 </style>
-<section class="themdc-container wrap z-50 relative mt-[-25px]">
+<section
+  class="themdc-container wrap z-50 relative md:mt-[-25px] md:mb-[-25px] mt-[-25vh] mb-[-50vh]"
+>
   <div class="content content--sticky content--card bg-1">
     <img
       class="content__img content__img--small"
@@ -184,9 +181,8 @@
   gsap.registerPlugin(ScrollTrigger);
   ScrollTrigger.normalizeScroll(true);
 
-
   const contentElements = [...document.querySelectorAll(".content--sticky")];
-  
+
   const scroll = () => {
     contentElements.forEach((el) => {
       gsap
@@ -202,8 +198,8 @@
           el,
           {
             ease: "none",
-            startAt: { filter: "blur(0px)" },
-            filter: "blur(1px)",
+            // startAt: { filter: "blur(0px)" },
+            // filter: "blur(1px)",
             scrollTrigger: {
               trigger: el,
               start: "top center",
