them dc updates

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,8 +18,8 @@ import Stats from "../components/Stats.astro";
 ---
 
 <Layout>
-  <!-- <IntroAnimation /> -->
-  <div class="main-content ">
+  <IntroAnimation />
+  <div class="main-content noshowintro">
     <div
       class="z-20 absolute md:top-5 top-7 w-full flex flex-row justify-center items-center flex-wrap md:h-[110px] h-[50px] gap-7"
     >
