them dc updates

--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -208,7 +208,7 @@ import CopyWrap from "./utils/CopyWrap.astro";
     />
     <img
       class="h-auto w-full showmobile top-0 z-10"
-      src="src/assets/queeringthecapital_mobileherov2.jpg"
+      src="https://media.them.us/photos/67efeca5ee937e54691b652d/original/pass/queeringthecapital_mobileherov2.jpg?format=original"
       alt=""
     />
   </div>
