--- a/src/components/StackingImages.astro
+++ b/src/components/StackingImages.astro
@@ -143,31 +143,31 @@
   <div class="content content--sticky content--card bg-1">
     <img
       class="content__img content__img--small"
-      src="https://media.them.us/photos/67e45a5a36f353775bd20add/original/pass/Them_DC_011.jpg?format=original"
+      src="https://media.them.us/photos/67e45a5a36f353775bd20add/w_700/pass/Them_DC_011.webp?format=original"
     />
   </div>
   <div class="content content--sticky content--card bg-2">
     <img
       class="content__img content__img--small"
-      src="https://media.them.us/photos/67e45a5a7d223d8dfc29deeb/original/pass/Them_DC_008.jpg?format=original"
+      src="https://media.them.us/photos/67e45a5a7d223d8dfc29deeb/w_700/pass/Them_DC_008.webp?format=original"
     />
   </div>
   <div class="content content--sticky content--card bg-3">
     <img
       class="content__img content__img--small"
-      src="https://media.them.us/photos/67e45a5af59203eea67adefa/original/pass/Them_DC_067.jpg?format=original"
+      src="https://media.them.us/photos/67e45a5af59203eea67adefa/w_700/pass/Them_DC_067.webp?format=original"
     />
   </div>
   <div class="content content--sticky content--card bg-4">
     <img
       class="content__img content__img--small"
-      src="https://media.them.us/photos/67e45a5af59203eea67adefb/original/pass/TRV235749_TH_x_DC_Chosen_Family_Trip_30SEC_16x9_022624_VIDEO_STILL_04.jpg?format=original"
+      src="https://media.them.us/photos/67e45a5af59203eea67adefb/w_700/pass/TRV235749_TH_x_DC_Chosen_Family_Trip_30SEC_16x9_022624_VIDEO_STILL_04.webp?format=original"
     />
   </div>
   <div class="content content--sticky content--card bg-5">
     <img
       class="content__img content__img--small"
-      src="https://media.them.us/photos/67e45a5b5c07e44cb8400584/original/pass/Them_DC_014.jpg?format=original"
+      src="https://media.them.us/photos/67e45a5b5c07e44cb8400584/w_700/pass/Them_DC_014.webp?format=original"
     />
   </div>
   <!-- <div class="content content--sticky content--card bg-5"></div> -->
