them dc updates

--- a/src/components/LogoBar.astro
+++ b/src/components/LogoBar.astro
@@ -2,23 +2,22 @@
 import { Image } from "astro:assets";
 ---
 
-  <a href="https://www.them.us/" target="_blank" class="mt-[5px]">
-    <Image
-      class=""
-      width="111.51"
-      height="43.11"
-      src="https://media.them.us/photos/67e5937d8d127305d968081c/original/pass/themlogo.png?format=original"
-      alt=""
-    />
-  </a>
-  <p class="mt-[15px]">&#x2715;</p>
-  <a href="https://washington.org/"target="_blank" >
-    <Image
-      class=""
-      width="92.24"
-      height="66.67"
-      src="https://media.them.us/photos/67e5937ec8879abc4c95cece/original/pass/DC-logo.png?format=original"
-      alt=""
-    />
-  </a>
-
+<a href="https://www.them.us/" target="_blank" class="mt-[5px] w-[75px]">
+  <Image
+    class=""
+    width="111.51"
+    height="43.11"
+    src="https://media.them.us/photos/67e5937d8d127305d968081c/original/pass/themlogo.png?format=original"
+    alt=""
+  />
+</a>
+<p class="mt-[15px] ">&#x2715;</p>
+<a href="https://washington.org/" target="_blank" class="w-[65px]">
+  <Image
+    class=""
+    width="92.24"
+    height="66.67"
+    src="https://media.them.us/photos/67e5937ec8879abc4c95cece/original/pass/DC-logo.png?format=original"
+    alt=""
+  />
+</a>
