--- a/src/components/FullGalleryScroll.astro
+++ b/src/components/FullGalleryScroll.astro
@@ -231,6 +231,12 @@
       --s: 3;
     }
   }
+
+    @media only screen and (max-width: 500px) {
+    .grid_full {
+      padding: 0 0;
+    }
+  }
 </style>
 
 <section class="md:my-24 relative themdc-container">
