--- a/src/components/IntroAnimation.astro
+++ b/src/components/IntroAnimation.astro
@@ -1,5 +1,3 @@
-
-
 <style>
   .slides {
     width: 100%;
@@ -46,6 +44,34 @@
   .noshowintro {
     display: none;
   }
+
+  .slide__img.slide__img_1 {
+    background-image: url(https://media.them.us/photos/67d079b5e6329b8e7c2a9bfa/w_1000/pass/Them_DC_062.jpg?format=original);
+  }
+  .slide__img.slide__img_2 {
+    background-image: url(https://media.them.us/photos/67d079b5d110009f91ba118d/w_1000/pass/Them_DC_053.png?format=original);
+  }
+  .slide__img.slide__img_3 {
+    background-image: url(https://media.them.us/photos/67d079b53bfb25f1f6ad8364/w_1000/pass/Them_DC_014%202.png?format=original);
+  }
+  .slide__img.slide__img_4 {
+    background-image: url(https://media.them.us/photos/67d079b5d110009f91ba118c/w_1000/pass/Them_DC_049.jpg?format=original);
+  }
+
+  @media only screen and (max-width: 500px) {
+    .slide__img.slide__img_1 {
+      background-image: url(https://media.them.us/photos/67f3e30970759bcc2a5b4ca9/original/pass/Them_DC_062_mobile.jpg?format=original);
+    }
+    .slide__img.slide__img_2 {
+      background-image: url(https://media.them.us/photos/67f3e309a7d4e1feb50df67b/original/pass/Them_DC_053_mobile.jpg?format=original);
+    }
+    .slide__img.slide__img_3 {
+      background-image: url(https://media.them.us/photos/67f3e30966146412caaee762/original/pass/Them_DC_052_mobile.jpg?format=original);
+    }
+    .slide__img.slide__img_4 {
+      background-image: url(https://media.them.us/photos/67f3e309a7d4e1feb50df67a/original/pass/Them_DC_049_mobile.jpg?format=original);
+    }
+  }
 </style>
 
 <section class="themdc-container">
@@ -78,29 +104,25 @@
     </div>
     <div class="slide">
       <div
-        class="slide__img"
-        style="background-image:url(https://media.them.us/photos/67d079b5e6329b8e7c2a9bfa/w_1000/pass/Them_DC_062.jpg?format=original)"
+        class="slide__img slide__img_1"
       >
       </div>
     </div>
     <div class="slide">
       <div
-        class="slide__img"
-        style="background-image:url(https://media.them.us/photos/67d079b5d110009f91ba118d/w_1000/pass/Them_DC_053.png?format=original)"
+        class="slide__img slide__img_2"
       >
       </div>
     </div>
     <div class="slide">
       <div
-        class="slide__img"
-        style="background-image:url(https://media.them.us/photos/67d079b53bfb25f1f6ad8364/w_1000/pass/Them_DC_014%202.png?format=original)"
+        class="slide__img slide__img_3"
       >
       </div>
     </div>
     <div class="slide">
       <div
-        class="slide__img"
-        style="background-image:url(https://media.them.us/photos/67d079b5d110009f91ba118c/w_1000/pass/Them_DC_049.jpg?format=original)"
+        class="slide__img slide__img_4"
       >
       </div>
     </div>
