--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,15 +4,100 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="generator" content={Astro.generator} />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <title>Them x Washington D.C.: Queering the Capital</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&display=swap"
-      rel="stylesheet"
+      rel="preload"
+      media="(min-width: 501px)"
+      href="https://media.them.us/photos/67d079b5e6329b8e7c2a9bfa/w_1000/pass/Them_DC_062.jpg?format=original"
+      as="image"
     />
-    <title>Them x Washington D.C.</title>
+    <link
+      rel="preload"
+      media="(min-width: 501px)"
+      href="https://media.them.us/photos/67d079b5d110009f91ba118d/w_1000/pass/Them_DC_053.png?format=original"
+      as="image"
+    />
+    <link
+      rel="preload"
+      media="(min-width: 501px)"
+      href="https://media.them.us/photos/67d079b53bfb25f1f6ad8364/w_1000/pass/Them_DC_014%202.png?format=original"
+      as="image"
+    />
+    <link
+      rel="preload"
+      media="(min-width: 501px)"
+      href="https://media.them.us/photos/67d079b5d110009f91ba118c/w_1000/pass/Them_DC_049.jpg?format=original"
+      as="image"
+    />
+
+    <link
+      rel="preload"
+      media="(max-width: 500px)"
+      href="https://media.them.us/photos/67f3e30970759bcc2a5b4ca9/original/pass/Them_DC_062_mobile.jpg?format=original"
+      as="image"
+    />
+    <link
+      rel="preload"
+      media="(max-width: 500px)"
+      href="https://media.them.us/photos/67f3e309a7d4e1feb50df67b/original/pass/Them_DC_053_mobile.jpg?format=original"
+      as="image"
+    />
+    <link
+      rel="preload"
+      media="(max-width: 500px)"
+      href="https://media.them.us/photos/67f3e30966146412caaee762/original/pass/Them_DC_052_mobile.jpg?format=original"
+      as="image"
+    />
+    <link
+      rel="preload"
+      media="(max-width: 500px)"
+      href="https://media.them.us/photos/67f3e309a7d4e1feb50df67a/original/pass/Them_DC_049_mobile.jpg?format=original"
+      as="image"
+    />
+
+    <meta name="generator" content={Astro.generator} />
+
+    <meta name="title" content="Them x Washington D.C.: Queering the Capital" />
+    <meta
+      name="description"
+      content="Queering the Capital is a photo, video, and social series where them follows four queer friends on a weekend getaway in Washington, D.C., capturing their journey. ."
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://them-dc-casestudy-xirrg.ondigitalocean.app/"
+    />
+    <meta
+      property="og:title"
+      content="Them x Washington D.C.: Queering the Capital"
+    />
+    <meta
+      property="og:description"
+      content="Queering the Capital is a photo, video, and social series where them follows four queer friends on a weekend getaway in Washington, D.C., capturing their journey. ."
+    />
+    <meta
+      property="og:image"
+      content="https://copilot-app.condenast.io/them/photos/67f4179edafc52c67b885b59"
+    />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://them-dc-casestudy-xirrg.ondigitalocean.app/"
+    />
+    <meta
+      property="twitter:title"
+      content="Them x Washington D.C.: Queering the Capital"
+    />
+    <meta
+      property="twitter:description"
+      content="Queering the Capital is a photo, video, and social series where them follows four queer friends on a weekend getaway in Washington, D.C., capturing their journey. ."
+    />
+    <meta
+      property="twitter:image"
+      content="https://copilot-app.condenast.io/them/photos/67f4179edafc52c67b885b59"
+    />
   </head>
+
   <body class="noscrollintro">
     <slot />
   </body>
