them dc updates

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,50 +8,50 @@
     <link
       rel="preload"
       media="(min-width: 501px)"
-      href="https://media.them.us/photos/67d079b5e6329b8e7c2a9bfa/w_1000/pass/Them_DC_062.jpg?format=original"
+      href="https://media.them.us/photos/67d079b5e6329b8e7c2a9bfa/w_1000/pass/Them_DC_062.jpg"
       as="image"
     />
     <link
       rel="preload"
       media="(min-width: 501px)"
-      href="https://media.them.us/photos/67d079b5d110009f91ba118d/w_1000/pass/Them_DC_053.png?format=original"
+      href="https://media.them.us/photos/67d079b5d110009f91ba118d/w_1000/pass/Them_DC_053.jpg"
       as="image"
     />
     <link
       rel="preload"
       media="(min-width: 501px)"
-      href="https://media.them.us/photos/67d079b53bfb25f1f6ad8364/w_1000/pass/Them_DC_014%202.png?format=original"
+      href="https://media.them.us/photos/67d079b53bfb25f1f6ad8364/w_1000/pass/Them_DC_014%202.jpg"
       as="image"
     />
     <link
       rel="preload"
       media="(min-width: 501px)"
-      href="https://media.them.us/photos/67d079b5d110009f91ba118c/w_1000/pass/Them_DC_049.jpg?format=original"
+      href="https://media.them.us/photos/67d079b5d110009f91ba118c/w_1000/pass/Them_DC_049.jpg"
       as="image"
     />
 
     <link
       rel="preload"
       media="(max-width: 500px)"
-      href="https://media.them.us/photos/67f3e30970759bcc2a5b4ca9/original/pass/Them_DC_062_mobile.jpg?format=original"
+      href="https://media.them.us/photos/67f3e30970759bcc2a5b4ca9/original/pass/Them_DC_062_mobile.jpg"
       as="image"
     />
     <link
       rel="preload"
       media="(max-width: 500px)"
-      href="https://media.them.us/photos/67f3e309a7d4e1feb50df67b/original/pass/Them_DC_053_mobile.jpg?format=original"
+      href="https://media.them.us/photos/67f3e309a7d4e1feb50df67b/original/pass/Them_DC_053_mobile.jpg"
       as="image"
     />
     <link
       rel="preload"
       media="(max-width: 500px)"
-      href="https://media.them.us/photos/67f3e30966146412caaee762/original/pass/Them_DC_052_mobile.jpg?format=original"
+      href="https://media.them.us/photos/67f3e30966146412caaee762/original/pass/Them_DC_052_mobile.jpg"
       as="image"
     />
     <link
       rel="preload"
       media="(max-width: 500px)"
-      href="https://media.them.us/photos/67f3e309a7d4e1feb50df67a/original/pass/Them_DC_049_mobile.jpg?format=original"
+      href="https://media.them.us/photos/67f3e309a7d4e1feb50df67a/original/pass/Them_DC_049_mobile.jpg"
       as="image"
     />
 
@@ -77,7 +77,7 @@
     />
     <meta
       property="og:image"
-      content="https://copilot-app.condenast.io/them/photos/67f4179edafc52c67b885b59"
+      content="https://them-dc-casestudy-xirrg.ondigitalocean.app/queeringthecapital_meta"
     />
     <meta property="twitter:card" content="summary_large_image" />
     <meta
@@ -94,7 +94,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://copilot-app.condenast.io/them/photos/67f4179edafc52c67b885b59"
+      content="https://them-dc-casestudy-xirrg.ondigitalocean.app/queeringthecapital_meta"
     />
   </head>
 
