--- a/src/components/IntroAnimation.astro
+++ b/src/components/IntroAnimation.astro
@@ -46,30 +46,30 @@
   }
 
   .slide__img.slide__img_1 {
-    background-image: url(https://media.them.us/photos/67d079b5e6329b8e7c2a9bfa/w_1000/pass/Them_DC_062.jpg?format=original);
+    background-image: url(https://media.them.us/photos/67d079b5e6329b8e7c2a9bfa/w_1000/pass/Them_DC_062.jpg);
   }
   .slide__img.slide__img_2 {
-    background-image: url(https://media.them.us/photos/67d079b5d110009f91ba118d/w_1000/pass/Them_DC_053.png?format=original);
+    background-image: url(https://media.them.us/photos/67d079b5d110009f91ba118d/w_1000/pass/Them_DC_053.jpg);
   }
   .slide__img.slide__img_3 {
-    background-image: url(https://media.them.us/photos/67d079b53bfb25f1f6ad8364/w_1000/pass/Them_DC_014%202.png?format=original);
+    background-image: url(https://media.them.us/photos/67d079b53bfb25f1f6ad8364/w_1000/pass/Them_DC_014%202.jpg);
   }
   .slide__img.slide__img_4 {
-    background-image: url(https://media.them.us/photos/67d079b5d110009f91ba118c/w_1000/pass/Them_DC_049.jpg?format=original);
+    background-image: url(https://media.them.us/photos/67d079b5d110009f91ba118c/w_1000/pass/Them_DC_049.jpg);
   }
 
   @media only screen and (max-width: 500px) {
     .slide__img.slide__img_1 {
-      background-image: url(https://media.them.us/photos/67f3e30970759bcc2a5b4ca9/original/pass/Them_DC_062_mobile.jpg?format=original);
+      background-image: url(https://media.them.us/photos/67f3e30970759bcc2a5b4ca9/original/pass/Them_DC_062_mobile.jpg);
     }
     .slide__img.slide__img_2 {
-      background-image: url(https://media.them.us/photos/67f3e309a7d4e1feb50df67b/original/pass/Them_DC_053_mobile.jpg?format=original);
+      background-image: url(https://media.them.us/photos/67f3e309a7d4e1feb50df67b/original/pass/Them_DC_053_mobile.jpg);
     }
     .slide__img.slide__img_3 {
-      background-image: url(https://media.them.us/photos/67f3e30966146412caaee762/original/pass/Them_DC_052_mobile.jpg?format=original);
+      background-image: url(https://media.them.us/photos/67f3e30966146412caaee762/original/pass/Them_DC_052_mobile.jpg);
     }
     .slide__img.slide__img_4 {
-      background-image: url(https://media.them.us/photos/67f3e309a7d4e1feb50df67a/original/pass/Them_DC_049_mobile.jpg?format=original);
+      background-image: url(https://media.them.us/photos/67f3e309a7d4e1feb50df67a/original/pass/Them_DC_049_mobile.jpg);
     }
   }
 </style>
@@ -86,17 +86,17 @@
         >
           <img
             class="w-[100px] logoleft"
-            src="https://media.them.us/photos/67e5937ec8879abc4c95cece/original/pass/DC-logo.png?format=original"
+            src="https://media.them.us/photos/67e5937ec8879abc4c95cece/original/pass/DC-logo.png"
             alt=""
           />
           <img
             class="w-[75%] md:w-[40%] mx-10 logocenter"
-            src="https://media.them.us/photos/67e584665120336f7dc2363b/original/pass/DC_TITLE_1-01%201.png?format=original"
+            src="https://media.them.us/photos/67e584665120336f7dc2363b/original/pass/DC_TITLE_1-01%201.png"
             alt=""
           />
           <img
             class="w-[130px] logoright"
-            src="https://media.them.us/photos/67e5937d8d127305d968081c/original/pass/themlogo.png?format=original"
+            src="https://media.them.us/photos/67e5937d8d127305d968081c/original/pass/themlogo.png"
             alt=""
           />
         </div>
