them dc updates

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -60,7 +60,7 @@
     <meta name="title" content="Them x Washington D.C.: Queering the Capital" />
     <meta
       name="description"
-      content="Queering the Capital is a photo, video, and social series where them follows four queer friends on a weekend getaway in Washington, D.C., capturing their journey. ."
+      content="Queering the Capital is a photo, video, and social series where them follows four queer friends on a weekend getaway in Washington, D.C., capturing their journey."
     />
     <meta property="og:type" content="website" />
     <meta
@@ -73,7 +73,7 @@
     />
     <meta
       property="og:description"
-      content="Queering the Capital is a photo, video, and social series where them follows four queer friends on a weekend getaway in Washington, D.C., capturing their journey. ."
+      content="Queering the Capital is a photo, video, and social series where them follows four queer friends on a weekend getaway in Washington, D.C., capturing their journey."
     />
     <meta
       property="og:image"
@@ -90,7 +90,7 @@
     />
     <meta
       property="twitter:description"
-      content="Queering the Capital is a photo, video, and social series where them follows four queer friends on a weekend getaway in Washington, D.C., capturing their journey. ."
+      content="Queering the Capital is a photo, video, and social series where them follows four queer friends on a weekend getaway in Washington, D.C., capturing their journey."
     />
     <meta
       property="twitter:image"
