them dc updates

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -77,7 +77,7 @@
     />
     <meta
       property="og:image"
-      content="https://them-dc-casestudy-xirrg.ondigitalocean.app/queeringthecapital_meta"
+      content="https://them-dc-casestudy-xirrg.ondigitalocean.app/queeringthecapital_meta.jpg"
     />
     <meta property="twitter:card" content="summary_large_image" />
     <meta
@@ -94,7 +94,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://them-dc-casestudy-xirrg.ondigitalocean.app/queeringthecapital_meta"
+      content="https://them-dc-casestudy-xirrg.ondigitalocean.app/queeringthecapital_meta.jpg"
     />
   </head>
 
