them dc updates

--- a/src/components/HorizontalScroll.astro
+++ b/src/components/HorizontalScroll.astro
@@ -45,6 +45,10 @@
       width: 400vw;
     }
   }
+
+    @media only screen and (max-width: 500px) {
+      .d_scroll {padding: 0 15px;}
+    }
 </style>
 
 <section
